# irrigation-sdk-python

./: README.md  pyproject.toml
src/hydrawise_irrigation/: Hydrawise.py  __init__.py
