[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrawise_irrigation"
version = "0.0.1"
authors = [
    { name="Naphtali Gilead", email="naphtul@hotmail.com" },
]
description = "A Python SDK for Hydrawise (Hunter) Irrigation API for customers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/naphtul/irrigation-sdk-python"
"Bug Tracker" = "https://github.com/naphtul/irrigation-sdk-python/issues"